# gameboy-emu

./: .clang-format  CMakeLists.txt
src/core/: LR35902.c  LR35902.h  bus.c  bus.h  cpu.c  cpu.h  main.c  rom.c  rom.h  useful_utils.h
